--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,4 +34,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: user/app:latest
+          tags: superduper09/autoheal:latest
